# GWAS-pipeline-dominance

./: .gitignore  README.md  STDOUT_summary.html  environment.yml  environmentgpu.yml  pyproject.toml
dominance_gwas/: __init__.py  npplink.py  plotting.py  results.py
gwas/: core.py  genome_decomposition_v2.py  gwas_cli.py  hwas.py  interactiveqc.py  kinship.py  npplink.py
