[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dominance-gwas"
version = "0.1.0"
description = "A trimmed, dominance-aware GWAS package derived from GWAS-pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "M. Sadegi"},
]
dependencies = []

[tool.setuptools.packages.find]
include = ["dominance_gwas*"]
